--- a/src/sass/_components.scss
+++ b/src/sass/_components.scss
@@ -18,9 +18,11 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        overflow: scroll;
     }
 
     &--item {
+        // text-decoration: none;
         padding: 4% 7%;
 
         border-radius: 2.5rem;
@@ -42,97 +44,107 @@
             background-color: #2D2C2D;
         }
 
-        &__add-category {
-            margin-top: auto;
-            position: relative;
+        // &:visited, &:active {
+        //     color: inherit;
+        // }
 
+    }
+
+    &--sub-item {
+        font-size: 1.4rem;
+        color: grey;
+    }
+
+    &__add-category {
+        margin-top: auto;
+        position: relative;
+
+        &:hover {
+            cursor: pointer;
+            background-color: #1A1B1B;
+        }
+
+        &__button {
+            border: none;
+            border-radius: 1rem;
+            background-color: inherit;
+
+            width: 3rem;
+            height: 3rem;
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            color: white;
+
+            transition: all .2s;
+            
             &:hover {
                 cursor: pointer;
-                background-color: #1A1B1B;
+                background-color: #2D2C2D;
+                transform: rotate(-45deg);
+            }
+
+        }
+
+        &--form {
+            width: 40rem;
+            height: 18rem;
+            position: absolute;
+            top: 0;
+            left: 0;
+            transform: translateY(-102%);
+
+            padding: 5% 4%;
+            // border: 1px solid red;
+            border-radius: 1.5rem;
+
+            display: flex;
+            flex-direction: column;
+            gap: 1rem;
+
+            z-index: 100;
+
+            background-color: #131213;
+            opacity: 1;
+
+            transition: all 0.3s;
+
+            &__hidden {
+                transform: translateY(-98%);
+                visibility: hidden;
+                opacity: 0;
+            }
+
+            &::after {
+                content: '';
+                width: 0;
+                height: 0;
+                position: absolute;
+
+                top: 100%;
+                left: 2.6rem;
+
+                border-left: 1rem solid transparent;
+                border-right: 1rem solid transparent;
+                border-top: 1rem solid #131213;
+            }
+
+            &__input {
+                border: 1px solid #2D2C2D;
+                background-color: #2D2C2D;
             }
 
             &__button {
-                border: none;
-                border-radius: 1rem;
-                background-color: inherit;
+                padding: 2%;
+                border-radius: 2.5rem;
 
-                width: 3rem;
-                height: 3rem;
-
-                display: flex;
-                justify-content: center;
-                align-items: center;
-
-                color: white;
-
-                transition: all .2s;
-                
                 &:hover {
                     cursor: pointer;
-                    background-color: #2D2C2D;
-                    transform: rotate(-45deg);
                 }
-
             }
 
-            &--form {
-                width: 40rem;
-                height: 18rem;
-                position: absolute;
-                top: 0;
-                left: 0;
-                transform: translateY(-102%);
-
-                padding: 5% 4%;
-                // border: 1px solid red;
-                border-radius: 1.5rem;
-
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-
-                z-index: 100;
-
-                background-color: #131213;
-                opacity: 1;
-
-                transition: all 0.3s;
-
-                &__hidden {
-                    transform: translateY(-98%);
-                    visibility: hidden;
-                    opacity: 0;
-                }
-
-                &::after {
-                    content: '';
-                    width: 0;
-                    height: 0;
-                    position: absolute;
-
-                    top: 100%;
-                    left: 2.6rem;
-
-                    border-left: 1rem solid transparent;
-                    border-right: 1rem solid transparent;
-                    border-top: 1rem solid #131213;
-                }
-
-                &__input {
-                    border: 1px solid #2D2C2D;
-                    background-color: #2D2C2D;
-                }
-
-                &__button {
-                    padding: 2%;
-                    border-radius: 2.5rem;
-
-                    &:hover {
-                        cursor: pointer;
-                    }
-                }
-
-            }
         }
     }
 
